# radius-auth-virtual

./: .gitmodules  .lvimrc  Cargo.toml  Makefile  README.md  TODO.md  config.toml.sample  submodules.patch
auth_client/: Cargo.toml
auth_client/src/: main.rs
common/: Cargo.toml
common/src/: serde.rs
nss_db/: Cargo.toml
nss_db/src/: config.rs  db.rs  error.rs  lib.rs  log.rs  user.rs
nss_db/tests/: db_test.rs  helpers.rs
nss_module/: Cargo.toml
nss_module/src/: lib.rs
nss_radius_virtual/: Cargo.toml
nss_radius_virtual/src/: lib.rs
nss_virtual/: Cargo.toml
nss_virtual/src/: lib.rs
pam_module/: Cargo.toml
pam_module/src/: lib.rs
pam_radius_virtual/: Cargo.toml
pam_radius_virtual/src/: lib.rs
radius/: Cargo.toml  build.rs
radius/src/: bindings.rs  client.rs  config.rs  error.rs  lib.rs  user.rs
radius/tests/: radius_test.rs
radius_client/: Cargo.toml  build.rs  debug_bindings.rs
radius_client/src/: bindings.c  bindings.h  bindings.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  prelude.rs  user.rs
radius_virtual/: Cargo.toml  build.rs
radius_virtual/src/: bindings.c  client.rs  config.rs  credentials.rs  db.rs  error.rs  lib.rs  prelude.rs  user.rs  win_patch.h
radius_virtual/tests/: db_test.rs  helpers.rs  radius_test.rs
shell_wrapper/: Cargo.toml
shell_wrapper/src/: main.rs
tests/: authorize  config.toml  run.sh
