[package]
name = "nss_db"
version = "0.1.0"
authors = ["Nicolas goy <kuon@goyman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
radius = {path = "../radius"}
log = "0.4.11"
syslog = "5.0.0"
serde = {version = "1.0.114", features = ["derive"]}
sqlite = "0.25.3"
serde_cbor = "0.11.1"
toml = "0.5.6"
thiserror = "1.0.20"
rand = "0.7.3"
