[package]
name = "pam_module"
version = "0.1.0"
authors = ["Nicolas goy <kuon@goyman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
nss_db = {path = "../nss_db"}
radius = {path = "../radius"}

[dependencies.pamsm]
#version = "0.4.0"
path = "../pam_sm_rust"
features = ["libpam"]

[lib]
name = "pam_radius_virtual"
crate-type = [ "cdylib" ]
