[package]
name = "pam_radius_virtual"
version = "0.1.0"
authors = ["Nicolas goy <kuon@goyman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pamsm]
version = "0.4.0"
features = ["libpam"]

[lib]
name = "pam_radius_virtual"
crate-type = [ "cdylib" ]
