[package]
name = "radius_client"
version = "0.1.0"
authors = ["Nicolas goy <kuon@goyman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"

[build-dependencies]
cc = "1.0.58"
bindgen = "0.54.1"
openssl-src = "111.10.2"
