[package]
name = "radius_virtual"
version = "0.1.0"
authors = ["Nicolas goy <kuon@goyman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
toml = "0.5.6"
serde = {version = "1.0.114", features = ["derive"]}

[build-dependencies]
cc = "1.0.58"
openssl-src = "111.10.2"
