[package]
name = "shell_wrapper"
version = "0.1.0"
authors = ["Nicolas goy <kuon@goyman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nss_db = {path = "../nss_db"}
anyhow = "1.0.32"
nix = "0.18.0"


[[bin]]
name = "radius_shell"
path = "src/main.rs"
